@@ -80,7 +80,7 @@ my $config = configure();
 
 # Now we can set these up based on what we got from configure.
 if ($config->{mta} eq 'sendmail') {
-  @SIDSCRIPTS = qw(mj_email mj_enqueue mj_shell mj_confirm 
+  @SIDSCRIPTS = qw(mj_email mj_enqueue mj_shell mj_confirm
                    mj_shutdown mj_wwwadm mj_wwwusr);
   @SCRIPTS = qw(mj_trigger mj_queueserv mj_queuerun mj_setup);
 }
@@ -183,8 +183,8 @@ Now you should run the following shell commands:
   make         (expect several warnings about truncation to 8 characters)
   make test    (report any problems to mj2-dev\@csf.colorado.edu)
   make install (usually as root, answering any questions that appear)
-  
-After the software has been installed, save a copy of .mj_config, 
+
+After the software has been installed, save a copy of .mj_config,
   which contains your answers to the configuration questions.
 
 Finally, read the help file for domain administrators with this command:
@@ -203,8 +203,8 @@ sub check_nr_install {
 
   print <<EOM;
 
-Majordomo 2 can be installed by the root user, 
-or by the majordomo user ($config->{'uid'}).  
+Majordomo 2 can be installed by the root user,
+or by the majordomo user ($config->{'uid'}).
 If there are any barriers to doing this, they are listed here:
 EOM
 
@@ -294,7 +294,7 @@ $@
 
 Errors here are generally problems with the Perl installation.  Sys::Syslog
 requires the file syslog.ph, which is supposed to be generated by running
-the h2ph program.  If syslog.ph was not found, it can be 
+the h2ph program.  If syslog.ph was not found, it can be
 generated by executing the following as root:
 
   cd /usr/include;h2ph * sys/*
@@ -318,7 +318,7 @@ EOW
   print "ok\n";
   1;
 }
-      
+
 sub check_prereq {
   my (%have, @mods_needed, $need, $pkg, $ver, $ok);
   $ok = 1;
@@ -356,7 +356,7 @@ capable of installing modules:
 EOP
     for my $i (@mods_needed) {
       print "perl -MCPAN -e'CPAN::Shell->install(\"$i\")'\n";
-    }  
+    }
     print "\n";
   }
 
@@ -370,7 +370,7 @@ sub have_vers {
   printf("Checking for %17s %-9s ", $pkg, $wanted==0?'(any)':"(v$wanted)");
 
   eval { my $p; ($p = $pkg . ".pm") =~ s!::!/!g; require $p; };
-  
+
   $vnum = ${"${pkg}::VERSION"} || ${"${pkg}::Version"} || 0;
   $vnum = -1 if $@;
 
@@ -426,11 +426,11 @@ Welcome to the Majordomo automatic configuration system!
 
 This script will guide you through some of the Majordomo configuration
 process.  Configuring majordomo causes a configuration file (.mj_config)
-to be created.  If an existing .mj_config file was found and read in, 
-the default answers below will be from that file. If no configuration 
-file existed, this is assumed to be a fresh install and basic defaults 
-will be provided. Some answers CANNOT be defaulted, even if this is a 
-re-install with an existing configuration file, so don't just hit ENTER 
+to be created.  If an existing .mj_config file was found and read in,
+the default answers below will be from that file. If no configuration
+file existed, this is assumed to be a fresh install and basic defaults
+will be provided. Some answers CANNOT be defaulted, even if this is a
+re-install with an existing configuration file, so don't just hit ENTER
 without reading the prompt\!
 
 EOM
@@ -495,13 +495,13 @@ sub generate_wrappers {
     if (-f "./bin/.$i") {
       unlink "./bin/.$i" || die("Unable to unlink bin/.$i: $!");
     }
-    link("./bin/$i", "./bin/.$i") 
+    link("./bin/$i", "./bin/.$i")
       || die("Unable to create link for bin/.$i: $!");
     open(WRAP, ">wrappers/$i.c") || die("Can't create wrappers/$i.c: $!");
-    print WRAP "main(ac, av)
-    char **av;
+    print WRAP "#include <unistd.h>
+int main(int ac, char ** av)
 {
-  execv(\"$config->{'install_dir'}/bin/.$i\", av);
+  return execv(\"$config->{'install_dir'}/bin/.$i\", av);
 }
 ";
     close WRAP;
